First version working

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Elm socket.io example</title>
+  <title>CloudModel chat app</title>
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body { font: 13px Helvetica, Arial; }
