--- a/src/client/index.html
+++ b/src/client/index.html
@@ -7,6 +7,7 @@
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body { font: 13px Helvetica, Arial; }
     #chatform { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
+    #errorMessage { color: rgb(230, 0, 0); font-weight: bold; padding: 12px; text-align: center; }
     #chatform input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
     #chatform button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
     #messages { list-style-type: none; margin: 0; padding: 0; }
